--- a/CMPR.X419.2/Assignment4/Assgmnt3/nextHighest/Makefile
+++ b/CMPR.X419.2/Assignment4/Assgmnt3/nextHighest/Makefile
@@ -1,6 +1,6 @@
-CFLAGS =	-Wall -fmessage-length=0
+CFLAGS =	-Wall -fmessage-length=0 -g
 
-OBJS =		nextHighest.o
+OBJS =		nextHighest.o utils.o
 
 LIBS =
 
